# python-interpreter-node

./: .gitignore  README.md  __init__.py  build.sh  dict_wrapper.py  image_tensor_wrapper.py  list_wrapper.py  number_wrapper.py  pyproject.toml  python_interpreter_node.py  python_node.py  requirements.txt  stream_wrapper.py  string_wrapper.py  tsconfig.json  wrapper_class.py  wrapper_interface.py
.github/workflows/: publish.yml
example_workflows/: Dynamic Contrast Adjustment.json  Get Complementary Color Palette from Image.json  Load Most Recent Image in Folder.json  Mask Crop.json
streams/: stream_manager.py
utils/: paths.py
web/: ace-editor.js  ace-editor.ts  append-stdout.js  append-stdout.ts  config.js  config.ts  get-history.js  get-history.ts  get-workflow-data.js  get-workflow-data.ts  python-interpreter-node.js  python-interpreter-node.ts  show-output-text.js
web/types/: ace.d.ts  comfy-app.d.ts  history.d.ts  types.d.ts  widgets.d.ts  workflow.d.ts
wiki/: advanced-usage.md  examples.md
wiki/code-snippets-from-demos/: copy_swap_tensors.py  dynamic_contrast_adjust.py  dynamic_wildcards.py  format_color.py  get_complementary_colors.py  mask_crop.py  most_recent_image_in_folder.py  paste_text_caption.py  random_prompt_gen.py  type_conversions.py
wiki/pictures/docs/: code_from_demo_pics.py  get_complementary_colors.py  ran_text.py
wiki/plans/: dev-log.md
wiki/workflows/: example1-workflow.json
wrappers/: dict_wrapper.py  image_tensor_wrapper.py  list_wrapper.py  number_wrapper.py  string_wrapper.py  wrapper_abc.py  wrapper_factory.py
wrappers/external_types/: abstract_external.py  model.py  tensor.py
wrappers/immutable_types/: bytes.py  none.py  number.py  string.py  tuple.py
wrappers/mutable_types/: bytearray.py  deque.py  dict.py  list.py  set.py
