[project]
name = "python-interpreter-node"
description = "Python interpreter to embed scripts into workflows and debug custom nodes."
version = "1.1.0"
license = "LICENSE"
dependencies = ["Pillow>=10.3.0"]

[project.urls]
Repository = "https://github.com/christian-byrne/python-interpreter-node"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "christian-byrne"
DisplayName = "python-interpreter-node"
Icon = "wiki/favicon.png"
