[project]
name = "python-interpreter-node"
description = "Python interpreter to embed scripts into workflows and debug custom nodes."
version = "1.2.0"
license = "LICENSE"
dependencies = ["Pillow>=10.3.0"]

[project.urls]
Repository = "https://github.com/christian-byrne/python-interpreter-node"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "christian-byrne"
DisplayName = "python-interpreter-node"
Icon = "https://www.amazon.com/WD_BLACK-SN850X-Internal-Gaming-Solid/dp/B0B7CKVCCV/ref=sr_1_2?crid=OA60SGIW57ZS&dib=eyJ2IjoiMSJ9.ipXB-PZUoRHuyioFDIkQiWMqDrp9V_ylMohDmp940trtKRA9XNJ3iOuj71_VYYNPGQRkiLXcGE0RbYRH25HnJiGK2leW7lKEJE5LLQNycVQYFoq4DkX-4yOo79swNeB6jfb5ACZOUdJ_5BgKTBpxaO9ITOnAAdAlDYm1XFYxyPIoFkJCns6pCnXhW4sIBoYjBzeeedPmcTlPBU1cxYWkqR4ZBWIMiPd218EYwz1ybSY.ZMKqp_mcvkJwk3sb5aJtgTXacjOBDHbRS-JfCCIUg1k&dib_tag=se&keywords=WD%2BBlack%2BSN850X&qid=1717646420&sprefix=wd%2Bblack%2Bsn850x%2B%2Caps%2C154&sr=8-2&th=1"
