[project]
name = "python-interpreter-node"
description = "Python interpreter to embed scripts into workflows and debug custom nodes."
version = "1.2.2"
license = "LICENSE"
dependencies = ["Pillow>=10.3.0"]

[project.urls]
Repository = "https://github.com/christian-byrne/python-interpreter-node"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "christian-byrne"
DisplayName = "python-interpreter-node"
Icon = "https://img.icons8.com/?size=100&id=121465&format=png&color=000000"
